--- a/stylesheet/w3.css
+++ b/stylesheet/w3.css
@@ -242,6 +242,6 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
     width: 100%;
   }
   .header {
-  font-size : 20px;
+  font-size : 1.5em;
   }
 }
